crates/service/tests/snapshots/build_output__a_satisfiable_instance_renders_every_placed_session.snap
---
source: crates/service/tests/build_output.rs
expression: output
---
SolverOutput {
    sessions: [
        PlacedSession {
            session_id: "",
            offering_id: "o1",
            start_slot: Some(
                SlotRef {
                    week: 0,
                    day: 1,
                    block: 0,
                },
            ),
            duration_blocks: 1,
            room_id: "r0",
            lecturer_ids: [
                "p1",
            ],
            group_ids: [
                "g1",
            ],
            person_ids: [],
            placement_ref: "o1#0",
            room_ids: [],
        },
        PlacedSession {
            session_id: "",
            offering_id: "o1",
            start_slot: Some(
                SlotRef {
                    week: 0,
                    day: 1,
                    block: 0,
                },
            ),
            duration_blocks: 1,
            room_id: "r1",
            lecturer_ids: [
                "p1",
            ],
            group_ids: [
                "g1",
            ],
            person_ids: [],
            placement_ref: "o1#1",
            room_ids: [],
        },
        PlacedSession {
            session_id: "",
            offering_id: "o1",
            start_slot: Some(
                SlotRef {
                    week: 0,
                    day: 1,
                    block: 1,
                },
            ),
            duration_blocks: 1,
            room_id: "r0",
            lecturer_ids: [
                "p1",
            ],
            group_ids: [
                "g1",
            ],
            person_ids: [],
            placement_ref: "o1#2",
            room_ids: [],
        },
    ],
    hard_violations: [],
    objective: Some(
        ObjectiveBreakdown {
            total: 0.0,
            components: [],
        },
    ),
    stats: Some(
        SolveStats {
            moves_evaluated: 0,
            moves_accepted: 0,
            elapsed_millis: 0,
            termination_reason: "converged",
        },
    ),
    candidates: [],
    unplaced_offerings: [],
    retained_session_ids: [],
}
