crates/service/tests/snapshots/build_output__an_empty_scope_produces_an_output_with_nothing_placed.snap
---
source: crates/service/tests/build_output.rs
expression: output
---
SolverOutput {
    sessions: [],
    hard_violations: [],
    objective: Some(
        ObjectiveBreakdown {
            total: 0.0,
            components: [],
        },
    ),
    stats: Some(
        SolveStats {
            moves_evaluated: 0,
            moves_accepted: 0,
            elapsed_millis: 0,
            termination_reason: "converged",
        },
    ),
    candidates: [],
    unplaced_offerings: [],
    retained_session_ids: [],
}
