crates/service/tests/snapshots/build_output__soft_components_appear_in_the_objective_breakdown.snap
---
source: crates/service/tests/build_output.rs
expression: output
---
SolverOutput {
    sessions: [
        PlacedSession {
            session_id: "",
            offering_id: "o1",
            start_slot: Some(
                SlotRef {
                    week: 0,
                    day: 2,
                    block: 2,
                },
            ),
            duration_blocks: 1,
            room_id: "r1",
            lecturer_ids: [
                "p1",
            ],
            group_ids: [
                "g1",
            ],
            person_ids: [],
        },
        PlacedSession {
            session_id: "",
            offering_id: "o1",
            start_slot: Some(
                SlotRef {
                    week: 1,
                    day: 3,
                    block: 4,
                },
            ),
            duration_blocks: 1,
            room_id: "r1",
            lecturer_ids: [
                "p1",
            ],
            group_ids: [
                "g1",
            ],
            person_ids: [],
        },
    ],
    hard_violations: [],
    objective: Some(
        ObjectiveBreakdown {
            total: 0.0,
            components: [
                ComponentScore {
                    constraint_id: "c-first",
                    constraint_type: "MinimizeBlockUsage",
                    raw_count: 0,
                    weighted: 0.0,
                },
                ComponentScore {
                    constraint_id: "c-last",
                    constraint_type: "MinimizeBlockUsage",
                    raw_count: 0,
                    weighted: 0.0,
                },
            ],
        },
    ),
    stats: Some(
        SolveStats {
            moves_evaluated: 480,
            moves_accepted: 2,
            elapsed_millis: 0,
            termination_reason: "converged",
        },
    ),
}
